@@ -1,3 +1,6 @@
 # BirlSuplementos
 Trabalho BD
 https://www.figma.com/file/pRYnvZxcmGgdeo06OLtw9W/Trabalho-BD?node-id=102%3A441
+
+
+--module-path "C:\Program Files\Java\javafx-sdk-18.0.1\lib" --add-modules=javafx.controls,javafx.fxml
